# walltaker-engine

./: .gitignore  Cargo.toml  License  Readme.md  build.rs  vlc.lib
.cargo/: config.toml
.github/workflows/: release.yml
res/: background.html  settings.html  wallpaper-engine.exe.manifest  walltaker-engine.rc
src/: gui.rs  hwnd.rs  main.rs  settings.rs  walltaker.rs  webview.rs
src/wallpaper/: mod.rs  video.rs
src/webview/: settings.rs  webviews.rs
wix/: main.wxs
