[package]
name = "walltaker-engine"
version = "0.1.314"
edition = "2021"
authors = [ "zoomasochist" ]

[dependencies]
anyhow = "1.0.76"
directories = "5.0.1"
single-instance = "0.3.3"
embed-resource = "2.4.0"
futures-util = "0.3.29"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
tokio-tungstenite = { version =  "0.21.0", features = [ "native-tls" ] }
tray-item = { git = "https://github.com/olback/tray-item-rs" }
vlc-rs = { git = "https://code.videolan.org/videolan/vlc-rs" }
# Maybe just do this manually with winapi
winrt-notification = "0.5.1"
rand = "0.8.5"
log = "0.4.20"
simplelog = "0.12.1"

[dependencies.tokio]
version = "1.35.1"
features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "sync"
]

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Graphics",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI",
    "Win32_Foundation",
    "Win32"
]

[build-dependencies]
embed-resource = "2.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
