[package]
name = "walltaker-engine"
authors = [ "zoomasochist" ]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
futures-util = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
simplelog = "0.12.1"
single-instance = "0.3.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version =  "0.21.0", features = [ "native-tls" ] }
tray-item = "0.9.0"
webview2-com = "0.28.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Graphics",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI",
    "Win32_Foundation",
    "Win32"
]

[build-dependencies]
embed-resource = "2.4.0"